Catalogue physical coverage and some translation fixes
